--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "JC",
   "license": "ISC",
   "dependencies": {
-    "jest": "^25.2.4"
+    "jest": "^25.2.4",
+    "lodash": "^4.17.15",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-server": "^0.8.1"
   },
   "devDependencies": {}
 }
