master - cleans uneeded libs

--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "jest": "^25.2.4",
     "jsdom": "^16.2.2",
     "lodash": "^4.17.15",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-server": "^0.8.1"
+    "react": "^16.13.1"
   },
   "devDependencies": {}
 }
